--- a/GuiaJuego/css/index.css
+++ b/GuiaJuego/css/index.css
@@ -113,3 +113,9 @@ ul {
 #bienvenida {
 	visibility: hidden;
 }
+
+#categorias {
+    float: left;
+    width: 28%;
+    border-right: 1px solid #CCCCCC;
+}
